--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -115,17 +115,17 @@
                                         </div>*@
                                         <div class="grigbar">
                                             <div class="myDIV">
-                                                <table class="table table-striped">
-                                                    <thead class="bgthead">
+                                                <table class="table tbpuple table-striped-puple">
+                                                    <thead class="bgthead-puple">
                                                         <tr>
-                                                            <th>No.</th>
-                                                            <th>Job No.</th>
-                                                            <th>วันที่</th>
-                                                            <th>ลูกค้า</th>
-                                                            <th>เบอร์โทร</th>
-                                                            <th class="hideANDseek">บุคคลติดต่อ</th>
-                                                            <th class="hideANDseek">ผู้ประสานงาน</th>
-                                                            <th class="hideANDseek">หมายเหตุ</th>
+                                                            <th class="thgray">No.</th>
+                                                            <th class="thgray">Job No.</th>
+                                                            <th class="thgray">วันที่</th>
+                                                            <th class="thgray">ลูกค้า</th>
+                                                            <th class="thgray">เบอร์โทร</th>
+                                                            <th class="thgray hideANDseek">บุคคลติดต่อ</th>
+                                                            <th class="thgray hideANDseek">ผู้ประสานงาน</th>
+                                                            <th class="thgray hideANDseek">หมายเหตุ</th>
                                                             <th></th>
                                                         </tr>
                                                     </thead>
@@ -153,6 +153,7 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
+        //$(".resp-tab-active").css("border-top", "4px solid #8023a2 !important");
         CheckAuthorization();
     });
 </script>
