--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -175,11 +175,29 @@
         font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
         font-size: 14px;
     }
+         .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
 
-    /*#calendar {
-        max-width: 0 auto;
-        margin: 0 auto;
-    }*/
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #9fa694 !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
 </style>
 
 <div id="calendar"></div>
@@ -195,17 +213,17 @@
 <table id="tblcalenCMP" class="table table-striped scrolling">
     <thead class="bgthead">
         <tr>
-            <th class="Rowpointer">No.</th>
-            <th class="hidecolumn Rowpointer">ID</th>
-            <th class="Rowpointer">Name</th>
-            <th class="hideANDseek Rowpointer">Position</th>
-            <th class="hideANDseek Rowpointer">Type</th>
-            <th class="Rowpointer">JobNo</th>
-            <th class="hideANDseek Rowpointer">Type of Working</th>
-            <th class="hideANDseek Rowpointer">JobDate</th>
-            <th class="Rowpointer">Start Working</th>
-            <th class="Rowpointer">End Working</th>
-            <th></th>
+            <th class="thgray Rowpointer">No.</th>
+            <th class="thgray hidecolumn Rowpointer">ID</th>
+            <th class="thgray Rowpointer">Name</th>
+            <th class="thgray hideANDseek Rowpointer">Position</th>
+            <th class="thgray hideANDseek Rowpointer">Type</th>
+            <th class="thgray Rowpointer">JobNo</th>
+            <th class="thgray hideANDseek Rowpointer">Type of Working</th>
+            <th class="thgray hideANDseek Rowpointer">JobDate</th>
+            <th class="thgray Rowpointer">Start Working</th>
+            <th class="thgray Rowpointer">End Working</th>
+            <th class="thgray"></th>
         </tr>
     </thead>
     <tbody id="result"></tbody>
