--- a/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
+++ b/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
@@ -192,22 +192,45 @@ $(document).ready(function () {
         font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
         font-size: 14px;
     }
+     .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #9fa694 !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
 </style>
 <div id="calendar"></div>
 <div id="calendarManPower"></div>
 <section class="features">
-    <table id="tblExpiredTechnician" class="table table-striped scrolling">
-        <thead class="bgthead">
+    <table id="tblExpiredTechnician" class="table tbgray table-striped-gray scrolling">
+        <thead class="bgthead-gray">
             <tr>
-                <th>No.</th>
+                <th class="thgray">No.</th>
                 <th class="hidecolumn">TechnicianID</th>
-                <th>ชื่อ-นามสกุล</th>
-                <th class="hideANDseek">ตำแหน่ง</th>
-                <th>ประเภทพนักงาน</th>
-                <th class="hideANDseek">เลขที่บัตร</th>
-                <th>วันหมดอายุ</th>
+                <th class="thgray">ชื่อ-นามสกุล</th>
+                <th class="thgray hideANDseek">ตำแหน่ง</th>
+                <th class="thgray">ประเภทพนักงาน</th>
+                <th class="thgray hideANDseek">เลขที่บัตร</th>
+                <th class="thgray">วันหมดอายุ</th>
                 <th class="hidecolumn">ประเภทบัตร</th>
-                <th>บริษัท</th>
+                <th class="thgray">บริษัท</th>
                 @*<th></th>*@
             </tr>
         </thead>
