--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -11,7 +11,7 @@
 <form id="dialog" >
         @*<label><b>Alpha Group</b></label>*@
         <div class="imgcontainer">
-            <img src="@Url.Content("~/images/radLogo.png")" alt="Avatar" class="avatar"/>
+            <img src="@Url.Content("~/images/Logo.png")" alt="Avatar" class="avatar"/>
         </div>
 
         <div class="container">
