--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -154,7 +154,7 @@
                         <div id="parentHorizontalTab">
                             <ul class="resp-tabs-list hor_1">
                                 <li>Income / Expense</li>
-                                <li>ManPower</li>
+                                <li id="Manpowertab">ManPower</li>
                                 <li>Requisition</li>
                                 <li style="display:none;">Sale Order</li>
                                 <li style="display:none;">Invoice</li>
