--- a/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
@@ -5,6 +5,39 @@
 <script src="@Url.Content("~/Scripts/CUDS/RequisitionAndReturn/IndexRequisition.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- grid  -------------------------------*@
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #9fa694 !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
+
 <table class="barattach-2">
     <tr>
         <td>
@@ -16,16 +49,16 @@
     <table id="tblRptJobOrder" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
-                <th class="Rowpointer">No.</th>
-                <th class="Rowpointer">Job No.</th>
-                <th class="Rowpointer">วันที่</th>
-                <th class="Rowpointer">ลูกค้า</th>
-                <th class="Rowpointer">สถานะ</th>
-                <th class="hidecolumn Rowpointer">เบอร์โทร</th>
-                <th class="hidecolumn Rowpointer">บุคคลติดต่อ</th>
-                <th class="hidecolumn Rowpointer">ผู้ประสานงาน</th>
-                <th class="hidecolumn Rowpointer">หมายเหตุ</th>
-                <th></th>
+                <th class="thgray Rowpointer">No.</th>
+                <th class="thgray Rowpointer">Job No.</th>
+                <th class="thgray Rowpointer">วันที่</th>
+                <th class="thgray Rowpointer">ลูกค้า</th>
+                <th class="thgray Rowpointer">สถานะ</th>
+                <th class="thgray hidecolumn Rowpointer">เบอร์โทร</th>
+                <th class="thgray hidecolumn Rowpointer">บุคคลติดต่อ</th>
+                <th class="thgray hidecolumn Rowpointer">ผู้ประสานงาน</th>
+                <th class="thgray hidecolumn Rowpointer">หมายเหตุ</th>
+                <th class="thgray"></th>
             </tr>
         </thead>
         <tbody id="result"></tbody>
