--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -5,24 +5,48 @@
 <script src="@Url.Content("~/Scripts/CUDS/SecurityProfile/IndexSecurityProfile.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- Header -------------------------------*@
+<style>
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
 
-<table class="barattach-2">
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #8ba5b7 !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #187ed5;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
+<table class="barattach-blue">
     <tr>
         <td>
             <label class="topicmargin-size67">Security Profile</label>
-            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgAdminCreate" /></a>
+            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgSecurityCreate" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
 </table>
 @*//===================================================================CSS w3school*@
-<table id="tblSecurityProfile" class="table table-striped scrolling" onended="SetPaging()">
-    <thead class="bgthead">
+<table id="tblSecurityProfile" class="table tbblue table-striped-blue scrolling" onended="SetPaging()">
+    <thead class="bgthead-blue">
         <tr>
-            <th class="Rowpointer">No.</th>
-            <th class="hidecolumn">ID</th>
-            <th class="Rowpointer">รายละเอียด</th>
-            <th></th>
+            <th class="thblue Rowpointer">No.</th>
+            <th class="thblue hidecolumn">ID</th>
+            <th class="thblue Rowpointer">รายละเอียด</th>
+            <th class="thblue"></th>
         </tr>
     </thead>
     <tbody id="result"></tbody>
