--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -3,6 +3,38 @@
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/WageTechnician/IndexWageTechnician.js")" type="text/javascript"></script>
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #9fa694 !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
 <table class="barattach-2">
     <tr>
         <td>
@@ -14,14 +46,14 @@
 <table id="tblWageTechnician" class="table table-striped scrolling">
     <thead class="bgthead">
         <tr>
-            <th>No.</th>
-            <th class="Rowpointer">TechnicianID</th>
-            <th class="hideANDseek Rowpointer">HRID</th>
-            <th class="Rowpointer">Name</th>
-            <th class="Rowpointer">Position</th>
-            <th class="hideANDseek Rowpointer">Type</th>
+            <th class="thgray">No.</th>
+            <th class="thgray Rowpointer">TechnicianID</th>
+            <th class="thgray hideANDseek Rowpointer">HRID</th>
+            <th class="thgray Rowpointer">Name</th>
+            <th class="thgray Rowpointer">Position</th>
+            <th class="thgray hideANDseek Rowpointer">Type</th>
             @*<th class="hideANDseek Rowpointer">Grade</th>*@
-            <th></th>
+            <th class="thgray"></th>
         </tr>
     </thead>
     <tbody id="result"></tbody>
