--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -1056,11 +1056,35 @@ select{
 }
 .bgthead{
         /*background-color:#d6e9c6 !important;*/
-         background-color:#f6c1b5 !important;
+         /*background-color:#f6c1b5 !important;*/
+         background-color:rgb(229, 230, 218) !important;
  }
 .bgthead-blue{
         /*background-color:#8ba5b7 !important;*/
         background-color:rgba(139, 165, 183, 0.40) !important;
+        /*color:#333333;*/
+         /*background-color:#daddff !important;*/
+ }
+.bgthead-gray{
+        /*background-color:#8ba5b7 !important;*/
+        background-color:rgba(170, 173, 156, 0.40) !important;
+        /*color:#333333;*/
+         /*background-color:#daddff !important;*/
+ }
+.bgthead-navyblue{
+         background-color: #eddaab !important;
+         color: #345080;
+        /*background-color:rgba(28, 50, 97, 0.40) !important;*/
+        /*color:#333333;*/
+         /*background-color:#daddff !important;*/
+ }
+.bgthead-puple{
+        background-color:rgba(187, 160, 192, 0.40) !important;
+        /*color:#333333;*/
+         /*background-color:#daddff !important;*/
+ }
+.bgthead-pink{
+        background-color:rgba(171, 55, 106, 0.20) !important;
         /*color:#333333;*/
          /*background-color:#daddff !important;*/
  }
@@ -1073,7 +1097,8 @@ select{
 .bodypadding-5 {
     padding: 5px;
     text-align: left;
-    background-color: #f39985;
+    background-color: #969c92;
+    /*background-color: #f39985;*/
 }
  @media screen and (max-width:680px) {
 
@@ -1164,6 +1189,34 @@ select{
     /*background-color: #5baa8c;*/
     background-color: #4b7490;
 }
+.barattach-gray {
+    margin-top: 0px;
+    width: 100%;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    background-color: #9fa694;
+}
+.barattach-navyblue {
+    margin-top: 0px;
+    width: 100%;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    background-color: #345080;
+}
+.barattach-puple {
+    margin-top: 0px;
+    width: 100%;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    background-color: #5b1675;
+}
+.barattach-pink {
+    margin-top: 0px;
+    width: 100%;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    background-color: #ab376a;
+}
 .barattach{
     margin-top: 0px;
     /*width: 48.10%;*/
@@ -1174,8 +1227,9 @@ select{
     margin-top: 0px;
     width: 100%;
     height: 40px;
+    background-color: #9fa694;
     /*background-color: #5baa8c;*/
-    background-color: #db6144;
+    /*background-color: #db6144;*/
 }
 .barattach-3 {
     margin-top: 0px;
