--- a/Alpha/AlphaMvc/Content/Tab/easy-responsive-tabs.css
+++ b/Alpha/AlphaMvc/Content/Tab/easy-responsive-tabs.css
@@ -52,7 +52,7 @@ h2.resp-accordion {
 	margin-bottom: -1px !important;
 	padding: 12px 14px 14px 14px !important;
 	/*border-top: 4px solid #5AB1D0 !important;*/
-    border-top: 4px solid #cd300c !important;
+    border-top: 4px solid #7c209e !important;
 	border-bottom: 0px #fff solid !important;
 }
 
