--- a/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
+++ b/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
@@ -249,7 +249,8 @@ NOTE: use percentage font sizes or else old IE chokes
 	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
 	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
 	/*background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);*/
-    background-image: linear-gradient(to bottom, #e67676, #e67676);
+    /*background-image: linear-gradient(to bottom, #e67676, #e67676);*/
+    background-image: linear-gradient(to bottom, #aaad9c, #969c92);
 	background-repeat: repeat-x;
 	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -264,7 +265,8 @@ NOTE: use percentage font sizes or else old IE chokes
 .fc-state-disabled {
 	color: #333333;
 	/*background-color: #e6e6e6;*/
-    background-color: #f4acac;
+    background-color: #909986;
+    /*background-color: #6a6955;*/
 }
 
 .fc-state-hover {
@@ -565,7 +567,8 @@ temporary rendered events).
 	font-size: .85em;
 	line-height: 1.3;
 	border-radius: 3px;
-    border: 1px solid #b32b0b;
+    border: 1px solid #afafaf;
+    /*border: 1px solid #b32b0b;*/
 	/*border: 1px solid #3a87ad;*/
 	font-weight: normal; /* undo jqui's ui-widget-header bold */
 }
@@ -574,14 +577,14 @@ temporary rendered events).
 .fc-event-dot {
 	/*background-color: #3a87ad;  default BACKGROUND color */
     /*background-color: #6acdab;*/
-      background-color: #f6c1b5;
+      background-color: #d8d8d8;
 }
 
 /* overpower some of bootstrap's and jqui's styles on <a> tags */
 .fc-event,
 .fc-event:hover,
 .ui-widget .fc-event {
-	color: #fff; /* default TEXT color */
+	color: #333333; /* default TEXT color */
 	text-decoration: none; /* if <a> has an href */
 }
 
