--- a/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
@@ -2,22 +2,64 @@
     ViewBag.Title = "ExpiredTechnician1";
 }
 <script src="@Url.Content("~/Scripts/CUDS/Technician/TechnicianExpiredCard.js")" type="text/javascript"></script>
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #d2973b !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
 @*<section class="features">*@
-    <table id="tblExpiredTechnician" class="table table-striped scrolling">
-        <thead class="bgthead">
+    <table class="barattach-navyblue">
+        <tr>
+            <td>
+                <label class="topictable">Teachnician</label>
+                <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+            </td>
+        </tr>
+    </table>
+<div class="table-responsive paginated">
+    <table id="tblExpiredTechnician" class="table tbnavyblue table-striped-navyblue scrolling">
+        <thead class="bgthead-navyblue">
             <tr>
-                <th>No.</th>
-                <th class="hidecolumn">TechnicianID</th>
-                <th>ชื่อ-นามสกุล</th>
-                <th class="hideANDseek">ตำแหน่ง</th>
-                <th>ประเภทพนักงาน</th>
-                <th class="hideANDseek">เลขที่บัตร</th>
-                <th>วันหมดอายุ</th>
-                <th class="hidecolumn">ประเภทบัตร</th>
-                <th>บริษัท</th>
+                <th class="thgray">No.</th>
+                <th class="thgray hidecolumn">TechnicianID</th>
+                <th class="thgray">ชื่อ-นามสกุล</th>
+                <th class="thgray hideANDseek">ตำแหน่ง</th>
+                <th class="thgray">ประเภทพนักงาน</th>
+                <th class="thgray hideANDseek">เลขที่บัตร</th>
+                <th class="thgray">วันหมดอายุ</th>
+                <th class="thgray hidecolumn">ประเภทบัตร</th>
+                <th class="thgray">บริษัท</th>
                 @*<th></th>*@
             </tr>
         </thead>
         <tbody id="ExpiredCard"></tbody>
     </table>
-@*</section>*@
+    </div>
+    @*</section>*@
