--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -6,28 +6,60 @@
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/IndexJobOrder.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- grid  -------------------------------*@
-<table class="barattach-2">
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #9e74ae !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
+<table class="barattach-puple">
     <tr>
         <td>
             <label class="topictable">Job Order</label>
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
-            @*<a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>*@
+            @*<a href="/JobOrder/CreateJobOrder" id="JobOrderCreate"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES"  class="imgadd" /></a>*@
         </td>
     </tr>
 </table>
 <div class="table-responsive">
-    <table id="tblJobOrder" class="table table-striped">
-        <thead class="bgthead">
+    <table id="tblJobOrder" class="table tbpuple table-striped-puple">
+        <thead class="bgthead-puple">
             <tr>
-                <th>No.</th>
-                <th>Job No.</th>
-                <th>วันที่</th>
-                <th>ลูกค้า</th>
-                <th>เบอร์โทร</th>
-                <th class="hideANDseek">บุคคลติดต่อ</th>
-                <th class="hideANDseek">ผู้ประสานงาน</th>
-                <th class="hideANDseek">หมายเหตุ</th>
-                <th></th>
+                <th class="thgray">No.</th>
+                <th class="thgray">Job No.</th>
+                <th class="thgray">วันที่</th>
+                <th class="thgray">ลูกค้า</th>
+                <th class="thgray">เบอร์โทร</th>
+                <th class="thgray hideANDseek">บุคคลติดต่อ</th>
+                <th class="thgray hideANDseek">ผู้ประสานงาน</th>
+                <th class="thgray hideANDseek">หมายเหตุ</th>
+                <th class="thgray"></th>
             </tr>
         </thead>
         <tbody id="result">
