--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -3,7 +3,39 @@
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Technician/IndexTechnician.js")" type="text/javascript"></script>
-<table class="barattach-2">
+<style>
+    body {
+        /*margin: 40px 10px;*/
+        padding: 0;
+        font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+        font-size: 14px;
+    }
+
+    .paging-nav {
+        text-align: right;
+        padding-top: 2px;
+    }
+
+        .paging-nav a {
+            margin: auto 1px;
+            text-decoration: none;
+            display: inline-block;
+            padding: 1px 7px;
+            background: #d2973b !important;
+            color: white;
+            border-radius: 3px;
+        }
+
+        .paging-nav .selected-page {
+            background: #7a8775;
+            font-weight: bold;
+        }
+
+    #result {
+        font-family: serif;
+    }
+</style>
+<table class="barattach-navyblue">
     <tr>
         <td>
             <label class="topictable">Teachnician</label>
@@ -12,17 +44,17 @@
     </tr>
 </table>
 <div class="table-responsive paginated">
-    <table id="tblTechnician" class="table table-striped scrolling" onended="SetPaging()">
-        <thead class="bgthead">
+    <table id="tblTechnician" class="table tbnavyblue table-striped-navyblue scrolling" onended="SetPaging()">
+        <thead class="bgthead-navyblue">
             <tr>
-                <th class="Rowpointer">No.</th>
-                <th class="Rowpointer">TechnicianID</th>
-                <th class="hideANDseek Rowpointer">HRID</th>
-                <th class="Rowpointer">Name</th>
-                <th class="Rowpointer">Position</th>
-                <th class="Rowpointer">ID Card</th>
-                <th class="hideANDseek Rowpointer">Type</th>
-                <th></th>
+                <th class="thgray Rowpointer">No.</th>
+                <th class="thgray Rowpointer">TechnicianID</th>
+                <th class="thgray hideANDseek Rowpointer">HRID</th>
+                <th class="thgray Rowpointer">Name</th>
+                <th class="thgray Rowpointer">Position</th>
+                <th class="thgray Rowpointer">ID Card</th>
+                <th class="thgray hideANDseek Rowpointer">Type</th>
+                <th class="thgray"></th>
             </tr>
         </thead>
         <tbody id="result"></tbody>
