--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -152,7 +152,7 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
-        $('.Number').number(true, 2);
+        //$('.Number').number(true, 2);
         var input = window.location.href;
         var after = input.split('?')[1]
         var val = after.split('=');
